--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,13 @@ project 'Runner', {
   'Release' => :release,
 }
 
+use_frameworks!
+
+def mindbox_notifications
+  pod 'MindboxNotifications'
+end
+
+
 def flutter_root
   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
   unless File.exist?(generated_xcode_build_settings_path)
@@ -32,6 +39,14 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+end
+
+target 'MindboxNotificationServiceExtension' do
+  mindbox_notifications
+end
+
+target 'MindboxContentNotificationExtension' do
+  mindbox_notifications
 end
 
 post_install do |installer|
